--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a-entity id="holdAnchor" position="0 0 -3"></a-entity>
         </a-camera>
 
-        <!-- <a-entity
+        <a-entity
           id="imageEntity"
           physics-image-target="name: researchPaper-1"
           visible="false"
@@ -79,20 +79,20 @@
             rotation="0 0 0"
             width="10"
             height="10"
-            material="shader: shadow; transparent: true; opacity: 0.4"
+            material="shader: shadow; transparent: true; opacity: 0"
             shadow
           >
           </a-plane>
-        </a-entity> -->
+        </a-entity>
 
         <a-entity id="wallEntity" visible="true" position="0 0 -20">
           <a-plane
             id="wall"
             class="cantap"
             rotation="0 0 0"
-            width="10"
-            height="10"
-            material="color:white; transparent: true; opacity: 0.4"
+            width="100"
+            height="100"
+            material="color:white; transparent: true; opacity: 0"
             shadow
           >
           </a-plane>
@@ -159,14 +159,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
-          <h2>Modal Header</h2>
+          <h2>Choose Subject of Expereince</h2>
         </div>
         <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+          
         </div>
         <div class="modal-footer">
-          <h3>Modal Footer</h3>
+          <h3></h3>
         </div>
       </div>
     </div>
