--- a/examples/researchPaper-index.html
+++ b/examples/researchPaper-index.html
@@ -23,13 +23,22 @@
   <body>
     <!-- <h1>Make your own "Teachable Machine" using Transfer Learning with MobileNet v3 in TensorFlow.js using saved graph model from TFHub.</h1> -->
 
-    <p id="status">
-      Debugger <br />
-      Awaiting TF.js load
-    </p>
-    <p id="timerContainer"> <input id="timerEnabled" type="checkbox" value="timerEnabled"> 
-      <p id="timer">Timer</p>
-    </p>
+    <div id="statusContainer">
+      <p id="timerContainer"> <input id="timerEnabled" type="checkbox" value="timerEnabled"> 
+        <label id="timer">Timer</label>
+      </p>
+      <p id="status">
+        Debugger <br />
+        Awaiting TF.js load
+      </p>
+      <!-- // added for colortracking -->
+      <!-- <div id="opencv">
+        <input type="color" class="form-control form-control-color" id="color-picker" value="#FFFFFF"
+        title="Choose your color">
+        <canvas id="canvasOutput" width="320" height="180"></canvas>
+        <video id="inputVideo" width="1280" height="720"></video>
+      </div> -->
+    </div>
 
     <div class="video-container">
       <!-- <video id="webcam" autoplay muted></video> -->
@@ -93,42 +102,6 @@
             height="1.5"
             src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationTwo.png?v=1661586468747"
           ></a-image>
-          <!-- <a-box
-              id="3DObj-0"
-              src = "https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/videoResearchPaper.png?v=1661586471078"
-              class="cantap 3DObj objOnImage"
-              hold-drag ="groundId: image-plane"
-              xrextras-two-finger-rotate 
-              xrextras-pinch-scale 
-              depth = 0.5
-              rotation="0 0 0"
-              shadow="receive: false"
-            >
-            </a-box>
-            <a-box
-              id="3DObj-1"
-              src = "https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationOne.png?v=1661586467613"
-              class="cantap 3DObj objOnImage"
-              hold-drag ="groundId: image-plane"
-              xrextras-two-finger-rotate 
-              xrextras-pinch-scale 
-              depth = 0.5
-              rotation="0 0 0"
-              shadow="receive: false"
-            >
-            </a-box> -->
-          <!-- <a-box
-            id="3DObj-2"
-            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationTwo.png?v=1661586468747"
-            class="cantap 3DObj objOnImage"
-            hold-drag="groundId: image-plane"
-            xrextras-two-finger-rotate
-            xrextras-pinch-scale
-            depth="0.5"
-            rotation="0 0 0"
-            shadow="receive: false"
-          >
-          </a-box> -->
           <a-plane
             id="image-plane"
             class="cantap"
@@ -141,18 +114,7 @@
           </a-plane>
         </a-entity>
 
-        <!-- <a-entity id="wallEntity" visible="true" position="0 0 -20">
-          <a-entity
-              id="3DObj-1"
-              gltf-model="#treeModel"
-              class="cantap 3DObj"
-              hold-drag="groundId: wall"
-              xrextras-two-finger-rotate 
-              xrextras-pinch-scale 
-              scale="3 3 3"
-              shadow="receive: false"
-            >
-            </a-entity>
+        <a-entity id="wallEntity" visible="true" position="0 0 -20">
             <a-plane
               id="wall"
               class="cantap"
@@ -163,7 +125,7 @@
               shadow
             >
             </a-plane>
-        </a-entity> -->
+        </a-entity>
 
         <a-assets>
           <!-- Download from https://github.com/8thwall/web/blob/master/examples/aframe/placeground/tree.glb -->
@@ -174,7 +136,7 @@
           <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
 
-        <!-- <a-box
+        <a-box
           id="ground"
           class="cantap"
           scale="1000 2 1000"
@@ -182,7 +144,7 @@
           material="shader: shadow; transparent: true; opacity: 0.4"
           shadow
         >
-        </a-box> -->
+        </a-box>
       </a-scene>
     </div>
 
@@ -222,14 +184,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
-          <h2>Modal Header</h2>
+          <h2>Choose Subject of Expereince</h2>
         </div>
         <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+          
         </div>
         <div class="modal-footer">
-          <h3>Modal Footer</h3>
+          <h3></h3>
         </div>
       </div>
     </div>
