--- a/examples/origami-index.html
+++ b/examples/origami-index.html
@@ -26,9 +26,6 @@
     <!-- <h1>Make your own "Teachable Machine" using Transfer Learning with MobileNet v3 in TensorFlow.js using saved graph model from TFHub.</h1> -->
 
     <div id="statusContainer">
-      <p id="timerContainer"> <input id="timerEnabled" type="checkbox" value="timerEnabled"> 
-        <label id="timer">Timer</label>
-      </p>
       <p id="status">
         Debugger <br />
         Awaiting TF.js load
@@ -148,7 +145,7 @@
     </div>
 
     <div class="button-container">
-      <div id="debug-container">Tool Bar</div>
+      <div id="debug-container">Teachable Reality</div>
       <canvas
         style="z-index: -1; display: none;"
         id="cameraFeed"
@@ -159,7 +156,7 @@
         <!-- Class buttons Generated in script.js -->
       </div>
       <div class="navigation-buttons">
-        <button id="addClass" class="removed">Add</button>
+        <button id="addClass" class="removed">Add State</button>
         <br />
         <br />
         <br />
@@ -182,7 +179,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
-          <span class="close">&times;</span>
+          <!-- <span class="close">&times;</span> -->
           <h2>Choose Subject of Expereince</h2>
         </div>
         <div class="modal-body">
@@ -190,6 +187,7 @@
         </div>
         <div class="modal-footer">
           <h3></h3>
+          <button id="saveARMode"> SAVE </button>
         </div>
       </div>
     </div>
@@ -202,3 +200,4 @@
     <script type="module" src="./customcomponents.js"></script>
   </body>
 </html>
+
