--- a/examples/researchPaper-index.html
+++ b/examples/researchPaper-index.html
@@ -196,6 +196,26 @@
       </div>
     </div>
 
+       <!-- The Modal -->
+       <div id="myObjectsModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <!-- <span class="close">&times;</span> -->
+            <h2>Type and Select the object you want to import:</h2>
+          </div>
+          <div class="modal-body">
+            <div id="addObjInput" style="width: 100%;"> 
+              <input id="objectVariable" type="text" style="width: 85%;" placeholder="Object Name">
+            </div> <br>
+            <div id="addObjButtons"></div>
+          </div>
+          <div class="modal-footer">
+            <h3></h3>
+          </div>
+        </div>
+      </div> 
+
     <!-- Import the page's JavaScript to do some stuff -->
     <!-- <script type="module" src="./script.js"></script> -->
     <script type="module" src="./predict.js"></script>
