--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         style="z-index: -1; display: none;"
         id="cameraFeed"
         class="removed"
-      ></canvas>
+    ></canvas>
       <button id="startMachine">Start</button>
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
@@ -164,6 +164,26 @@
         <div class="modal-footer">
           <h3></h3>
           <button id="saveARMode"> SAVE </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- The Modal -->
+    <div id="myObjectsModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <span class="close">&times;</span> -->
+          <h2>Type and Select the object you want to import:</h2>
+        </div>
+        <div class="modal-body">
+          <div id="addObjInput" style="width: 100%;"> 
+            <input id="objectVariable" type="text" style="width: 85%;" placeholder="Object Name">
+          </div> <br>
+          <div id="addObjButtons"></div>
+        </div>
+        <div class="modal-footer">
+          <h3></h3>
         </div>
       </div>
     </div>
