--- a/index.html
+++ b/index.html
@@ -123,9 +123,12 @@
     <div class="button-container">
       <div id="debug-container">Teachable Reality</div>
       <canvas
-        style="z-index: -1; display: none;"
+        style="z-index: -1;"
         id="cameraFeed"
-        class="removed"
+    ></canvas>
+    <canvas
+        style="z-index: -1;"
+        id="canvasOutput"
     ></canvas>
       <button id="startMachine">Start</button>
       <div class="class-container">
@@ -151,11 +154,9 @@
     ></script>
 
     <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
+    <!-- <div id="myModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <!-- <span class="close">&times;</span> -->
           <h2>Choose Subject of Expereince</h2>
         </div>
         <div class="modal-body">
@@ -166,7 +167,7 @@
           <button id="saveARMode"> SAVE </button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- The Modal -->
     <div id="myObjectsModal" class="modal">
@@ -174,16 +175,25 @@
       <div class="modal-content">
         <div class="modal-header">
           <!-- <span class="close">&times;</span> -->
-          <h2>Type and Select the object you want to import:</h2>
+          <h2> Add Asset to Scene</h2>
         </div>
         <div class="modal-body">
           <div id="addObjInput" style="width: 100%;"> 
-            <input id="objectVariable" type="text" style="width: 85%;" placeholder="Object Name">
+            <input id="objectVariable" type="text" style="width: 85%;" placeholder="Type Asset Name (eg. tree)">
           </div> <br>
-          <div id="addObjButtons"></div>
+        <div id="anchorType">
+          <h3>Anchor Asset to:</h3>
+        </div> <br>
+        <div id="addObjButtons">
+          <h3>Select Type of Asset:</h3>
+        </div> 
+        <div id="addCustomObjButtons">
+          <h3>Custom Logic:</h3>
+        </div>
         </div>
         <div class="modal-footer">
           <h3></h3>
+          <!-- <button id="addObject"> SAVE </button> -->
         </div>
       </div>
     </div>
