spawning bug corrected

--- a/examples/card-index.html
+++ b/examples/card-index.html
@@ -74,7 +74,7 @@
             class="cantap 3DObj objOnImage"
             position="1.25 -0.5 0.3"
             visible = "false"
-            src="https://cdn.glitch.global/9d96da6c-4608-4db3-916b-e2708b3bf5bc/statement.png?v=1663250989620"
+            src="https://cdn.glitch.global/9d96da6c-4608-4db3-916b-e2708b3bf5bc/statement%20Small.png?v=1663748577714"
           ></a-image>
           <a-image
             id="3DObj-1"
@@ -86,7 +86,7 @@
             rotation="0 0 90"
             scale="1.25 1.25 1.25"
             visible = "false"
-            src="https://cdn.glitch.global/9d96da6c-4608-4db3-916b-e2708b3bf5bc/Frame%207.png?v=1663260800142"
+            src="https://cdn.glitch.global/9d96da6c-4608-4db3-916b-e2708b3bf5bc/statement%20Big.png?v=1663748580665"
           ></a-image>
           <a-plane
             id="image-plane"
@@ -100,7 +100,7 @@
           </a-plane>
         </a-entity>
 
-        <a-entity id="wallEntity" visible="true" position="0 0 -20">
+        <!-- <a-entity id="wallEntity" visible="true" position="0 0 -20">
             <a-plane
               id="wall"
               class="cantap"
@@ -111,7 +111,7 @@
               shadow
             >
             </a-plane>
-        </a-entity>
+        </a-entity> -->
 
         <a-assets>
           <!-- Download from https://github.com/8thwall/web/blob/master/examples/aframe/placeground/tree.glb -->
@@ -122,7 +122,7 @@
           <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
 
-        <a-box
+        <!-- <a-box
           id="ground"
           class="cantap"
           scale="1000 2 1000"
@@ -130,7 +130,7 @@
           material="shader: shadow; transparent: true; opacity: 0.4"
           shadow
         >
-        </a-box>
+        </a-box> -->
       </a-scene>
     </div>
 
