--- a/examples/phoneDND-index.html
+++ b/examples/phoneDND-index.html
@@ -123,9 +123,9 @@
           scale="1 1 1"
         >
           <a-text
-            position="-0.5 1 0"
-            scale="0.5 0.5 0.5"
-            value="Do not Disturb"
+            position="-0.25 1 0"
+            scale="1 1 1"
+            value="DND"
           ></a-text>
           <a-image
             position="0 0.75 0"
@@ -153,8 +153,8 @@
           scale="1 1 1"
         >
           <a-image
-            position="0 1.25 0"
-            scale="0.5 0.5 0.5"
+            position="0 1.5 0"
+            scale="1 1 1"
             src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/notifications-preview.png?v=1661612571713"
           ></a-image>
           <a-image
