--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     <div class="button-container">
       <div id="debug-container">Teachable Reality</div>
       <canvas
-        style="z-index: -1;"
+        style="z-index: -1; display: none;"
         id="cameraFeed"
     ></canvas>
     <canvas
-        style="z-index: -1;"
+        style="z-index: -1; display: none;"
         id="canvasOutput"
     ></canvas>
       <button id="startMachine">Start</button>
